<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/question"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resultsbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/results"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/resultsbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/androidbtn"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:text="@string/androidbtn"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/iosbtn"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:text="@string/iosbtn"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/counts"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/android_count"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/android_count"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ios_count"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/ios_count"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>