<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/backToMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/returntoMain"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ios_layout"
            app:layout_constraintVertical_bias="0.978" />

        <LinearLayout
            android:id="@+id/android_layout"
            android:layout_width="370dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="176dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/androidbtn"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/androidEdit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="Android users"
                android:ems="10"
                android:hint="@string/noOfUsers"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ios_layout"
            android:layout_width="370dp"
            android:layout_height="67dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/android_layout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/iosbtn"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/iosEdit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="IOS users"
                android:ems="10"
                android:hint="@string/noOfUsers"
                android:inputType="text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>